# rustscript

./: .gitignore  Cargo.toml  Dockerfile.pd-controller  Dockerfile.pd-edge  README.md  build.rs  release.toml  repo-analysis.md
crates/rustscript/: Cargo.toml
crates/rustscript/src/: lib.rs
crates/rustscript/tests/: alias_smoke.rs
pd-controller/: Cargo.toml  README.md
pd-controller/src/: main.rs  server.rs
pd-controller/src/server/: handlers.rs  ui_codegen.rs
pd-controller/tests/: controller_tests.rs  e2e_demo_tests.rs
pd-controller/tests/controller_tests/: debug.rs  programs.rs  rpc.rs  support.rs  ui.rs
pd-controller/webui/: package.json  vite.config.ts
pd-controller/webui/scripts/: build-wasm-linter.mjs
pd-controller/webui/src/: App.tsx
pd-controller/webui/tests/: rustscriptLanguage.test.ts
pd-edge/: Cargo.toml  README.md
pd-edge-abi/: Cargo.toml  abi.json  build.rs
pd-edge-abi/src/: lib.rs
pd-edge-abi/src/abi_spec/: console.rs  functions.rs  http.downstream.rs  http.exchange.rs  http.request.rs  http.response.rs  http.upstream.request.rs  http.upstream.response.rs  mqtt.rs  namespaces.rs  proxy.rs  runtime.rs  tcp.rs  tls.rs  udp.rs  webrtc.rs  websocket.rs
pd-edge/docs/: HTTP_PROXY_PERF_METHODOLOGY.md  HTTP_PROXY_PERF_REPORT_2026-03-07.md  HTTP_PROXY_PERF_REPORT_2026-03-08.md  HTTP_PROXY_PERF_REPORT_2026-03-11.md  HTTP_PROXY_PERF_REPORT_2026-03-13.md  HTTP_PROXY_PERF_REPORT_2026-03-14.md  HTTP_PROXY_PERF_REPORT_2026-03-15.md  HTTP_PROXY_PERF_REPORT_2026-03-17.md  HTTP_PROXY_PERF_REPORT_2026-03-18.md  HTTP_PROXY_PERF_REPORT_2026-03-19.md  full-dag.md
pd-edge/examples/: README.md  build_sample_program.rs  compile_to_file.rs  http_proxy_perf_framework.rs  sample_downstream_http2_program.rss  sample_forward_proxy_program.rss  sample_http_proxy_tls_prelude_program.rss  sample_io_upstream_handle_program.rss  sample_proxy_program.js  sample_proxy_program.lua  sample_proxy_program.rss  sample_proxy_program.scm  sample_request_transform_program.rss  sample_sse_proxy_program.rss  sample_subrequest_proxy_program.rss  sample_transport_http_handoff_program.rss  sample_transport_proxy_program.rss  sample_transport_tls_handshake_program.rss  sample_transport_websocket_sse_bridge_program.rss  sample_tunnel_proxy_program.rss  sample_upstream_http3_program.rss  sample_upstream_transport_proxy_program.rss  sample_websocket_proxy_program.rss
pd-edge/examples/console/: sample_console_http3_client.rss
pd-edge/pd-edge-host-function/: Cargo.toml
pd-edge/pd-edge-host-function/src/: edge.rs  lib.rs
pd-edge/src/: active_control_plane.rs  build_info.rs  cache.rs  compile.rs  control_plane_http_client.rs  control_plane_rpc.rs  debug_session.rs  host_abi.rs  lib.rs  lock_metrics.rs  logging.rs  runtime.rs  sample_echo.rs
pd-edge/src/abi_impl/: console.rs  io.rs  mod.rs  proxy.rs  registry.rs  runtime.rs
pd-edge/src/runtime/: transport_plane.rs  vm_runner.rs
pd-edge/stdlib/rss/: io_async.rss
pd-edge/tests/: compile_tests.rs  proxy_tests.rs  sample_echo.rs
pd-edge/tests/proxy_tests/: attach_transport.rs  control_plane.rs  debug.rs  forward_proxy.rs  http.rs  io.rs  mqtt.rs  support.rs  tls.rs  transport.rs  webrtc.rs  websocket.rs
pd-edge/tests/support/: http3_support.rs
pd-host-function/: Cargo.toml
pd-host-function/src/: lib.rs
pd-vm/: Cargo.toml  README.md  build.rs
pd-vm-nostd/: Cargo.toml  README.md
pd-vm-nostd/src/: error.rs  host.rs  lib.rs  program.rs  value.rs  vm.rs  vmbc.rs
pd-vm-nostd/tests/: embedded_host.rs  embedded_vm.rs  embedded_vmbc.rs
pd-vm-wasm/: Cargo.toml
pd-vm-wasm/examples/: rss-callable-values-example.rss  rss-collections-iter-example.rss  rss-ifft-example.rss  rss-strings-regex-example.rss
pd-vm-wasm/src/: analyzer.rs  completions.rs  lib.rs  stdlib.rs
pd-vm/docs/: JIT_BACKEND_MIGRATION_PERF_2026-03-06.md
pd-vm/examples/: aes_128_cbc_usage.rss  example.js  example.lua  example.rss  example.scm  example_complex.js  example_complex.lua  example_complex.rss  example_complex.scm  ifft_math.rss  mini_bench.rs  rustscript_fuzz.rs
pd-vm/examples/crypto/: aes_128_cbc.rss
pd-vm/pd-host-function/src/: lib.rs
pd-vm/pd-vm-lint-wasm/: Cargo.toml
pd-vm/pd-vm-lint-wasm/src/: analyzer.rs  completions.rs  lib.rs  stdlib.rs
pd-vm/pd-vm-runtime-wasm/: Cargo.toml
pd-vm/pd-vm-runtime-wasm/src/: analyzer.rs  completions.rs  lib.rs  runtime.rs  stdlib.rs
pd-vm/pd-vm-wasm/: Cargo.toml
pd-vm/pd-vm-wasm/examples/: rss-complex-example.rss
pd-vm/pd-vm-wasm/src/: analyzer.rs  completions.rs  lib.rs  runtime.rs  stdlib.rs
pd-vm/scripts/: compare-jit-backends.ps1  compare-jit-backends.sh
pd-vm/src/: assembler.rs  builtins.rs  bytecode.rs  compiler.rs  debug_info.rs  debugger.rs  lib.rs  vm.rs  vmbc.rs
pd-vm/src/builtins/: metadata.rs
pd-vm/src/compiler/: README.md  codegen.rs  diagnostics.rs  driver.rs  format.rs  helpers.rs  ir.rs  lifetime.rs  linker.rs  mod.rs  opt.rs  parser.rs  pipeline.rs  source_loader.rs  source_map.rs  typing.rs
pd-vm/src/debugger/: mod.rs  recording.rs  replay.rs  tests.rs
pd-vm/src/vm/: builtin_runtime.rs  epoch.rs  fuel.rs  host.rs  mod.rs  store.rs  superinstructions.rs  tests.rs
pd-vm/stdlib/rss/: bytes.rss  collections.rss  io.rss  iter.rss  lrucache.rss  math.rss  parse.rss  path.rss  set.rss  strings.rss
pd-vm/stdlib/tests/: bytes.rss  collections.rss  io.rss  iter.rss  (+7 more)
pd-vm/tests/: assembler_vmbc_edge_tests.rs  builtins_tests.rs  compiler_common_tests.rs  compiler_javascript_tests.rs  compiler_lua_tests.rs  compiler_rustscript_module_import_tests.rs  compiler_rustscript_tests.rs  compiler_scheme_tests.rs  compiler_tests.rs  diagnostics_tests.rs  drop_contract_tests.rs  example_tests.rs  functional_parity_tests.rs  io_builtin_edge_tests.rs  jit_nyi_edge_tests.rs  jit_tests.rs  perf_tests.rs  runtime_state_edge_tests.rs  stdlib_tests.rs  type_inference_tests.rs  vm_async_runtime_tests.rs  vm_runtime_tests.rs  vm_tests.rs  whitespace_resilience_tests.rs  wire_tests.rs
pd-vm/webui/: .gitignore  README.md  about.html  index.html  package.json  tsconfig.json  vite.config.ts
(+486 files in other folders)
