[workspace]
members = [
    ".",
    "pd-host-function",
    "pd-vm-wasm",
    "crates/rustscript",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[package]
name = "pd-vm"
version.workspace = true
edition.workspace = true
description = "RustScript bytecode compiler and VM"
license = "MIT"
homepage = "https://rustscript.org/"
repository = "https://github.com/rustscript-lang/rustscript"

[lib]
name = "vm"

[features]
default = ["std", "runtime", "cli", "cranelift-jit", "http", "tls", "websocket"]
std = [
    "dep:base64",
    "dep:futures-channel",
    "dep:libc",
    "dep:paste",
    "dep:pd-host-function",
    "dep:regex",
    "dep:rt-format",
    "dep:serde",
    "dep:serde_json",
    "dep:windows-sys",
]
embedded-runtime = []
runtime = ["std"]
edge-abi = ["std", "dep:edge_abi"]
http = ["edge-abi", "edge_abi/http"]
http2 = ["http", "edge_abi/http2"]
mqtt = ["edge-abi", "edge_abi/mqtt"]
tls = ["http", "edge_abi/tls"]
websocket = ["http", "edge_abi/websocket"]
webrtc = ["http", "edge_abi/webrtc"]
cli = ["dep:rustyline", "runtime"]
cranelift-jit = [
    "runtime",
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]

[[bin]]
name = "pd-vm-run"
path = "src/bin/pd-vm-run.rs"
required-features = ["cli"]

[dependencies]
base64 = { version = "0.22", optional = true }
cranelift-codegen = { version = "0.129.1", optional = true }
cranelift-frontend = { version = "0.129.1", optional = true }
cranelift-jit = { version = "0.129.1", optional = true }
cranelift-module = { version = "0.129.1", optional = true }
cranelift-native = { version = "0.129.1", optional = true }
pd-host-function = { path = "./pd-host-function", version = "0.1.0", optional = true }
edge_abi = { package = "pd-edge-abi", version = "0.1.1", default-features = false, optional = true }
futures-channel = { version = "0.3", optional = true }
paste = { version = "1", optional = true }
regex = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
rt-format = { version = "0.3.1", optional = true }
rustyline = { version = "14", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = ["Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }

[build-dependencies]
syn = { version = "2", features = ["full"] }
