[workspace]
members = [
    ".",
    "pd-host-function",
    "pd-vm-nostd",
    "pd-vm-wasm",
    "crates/rustscript",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[package]
name = "pd-vm"
version.workspace = true
edition.workspace = true
description = "RustScript bytecode compiler and VM"
license = "MIT"
homepage = "https://rustscript.org/"
repository = "https://github.com/rustscript-lang/rustscript"

[lib]
name = "vm"

[features]
default = ["runtime", "cli", "cranelift-jit"]
runtime = []
edge-abi = [
    "dep:edge_abi",
    "edge_abi/console",
    "edge_abi/http",
    "edge_abi/http2",
    "edge_abi/mqtt",
    "edge_abi/tls",
    "edge_abi/websocket",
    "edge_abi/webrtc",
]
cli = ["dep:rustyline", "runtime"]
cranelift-jit = [
    "runtime",
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]

[[bin]]
name = "pd-vm-run"
path = "src/bin/pd-vm-run.rs"
required-features = ["cli"]

[dependencies]
base64 = "0.22"
cranelift-codegen = { version = "0.129.1", optional = true }
cranelift-frontend = { version = "0.129.1", optional = true }
cranelift-jit = { version = "0.129.1", optional = true }
cranelift-module = { version = "0.129.1", optional = true }
cranelift-native = { version = "0.129.1", optional = true }
pd-host-function = { path = "./pd-host-function", version = "0.1.0" }
edge_abi = { package = "pd-edge-abi", version = "0.1.1", default-features = false, optional = true }
futures-channel = "0.3"
paste = "1"
regex = "1"
serde = "1"
serde_json = "1"
rt-format = "0.3.1"
self_cell = "1"
rustyline = { version = "14", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
syn = { version = "2", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }

[[test]]
name = "host_binding_generation_tests"
path = "tests/host_binding_generation_tests.rs"

[build-dependencies]
syn = { version = "2", features = ["full"] }
