[package]
name = "pd-controller"
edition.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
edge = { package = "pd-edge", path = "../pd-edge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
vm = { package = "pd-vm", path = "../pd-vm" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
