[package]
name = "pd-edge-abi"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "edge_abi"

[features]
default = ["http", "tls", "websocket"]
http = []
tls = []
websocket = ["http"]
webrtc = ["http"]

[dependencies]
pd-host-function = { path = "../pd-vm/pd-host-function" }

[build-dependencies]
syn = { version = "2", features = ["full"] }
