[package]
name = "pd-edge"
version.workspace = true
edition.workspace = true
build = "build.rs"
autobins = false

[lib]
name = "edge"

[[bin]]
name = "pd-edge-http-proxy"
path = "src/bin/pd-edge-http-proxy.rs"

[[bin]]
name = "pd-edge-console"
path = "src/bin/pd-edge-console.rs"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
futures-util = "0.3"
pd-edge-host-function = { path = "./pd-edge-host-function" }
linkme = "0.3"
vm = { package = "pd-vm", path = "../pd-vm" }
edge_abi = { package = "pd-edge-abi", path = "../pd-edge-abi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
owo-colors = "4"
supports-color = "3"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
url = "2"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
rcgen = "0.12"
tokio-rustls = "0.26"
