[package]
name = "pd-edge"
version.workspace = true
edition.workspace = true
build = "build.rs"
autobins = false

[lib]
name = "edge"

[features]
default = ["http", "tls", "websocket"]
http = ["vm/http", "edge_abi/http"]
http2 = ["http", "vm/http2", "edge_abi/http2", "reqwest/http2", "dep:h2", "dep:tokio-rustls", "dep:webpki-roots", "dep:rustls-pemfile"]
tls = ["http", "vm/tls", "edge_abi/tls", "dep:tokio-rustls", "dep:rcgen"]
websocket = ["http", "vm/websocket", "edge_abi/websocket", "dep:tokio-tungstenite"]
webrtc = ["http", "vm/webrtc", "edge_abi/webrtc", "dep:webrtc", "dep:rustls"]

[[bin]]
name = "pd-edge-http-proxy"
path = "src/bin/pd-edge-http-proxy.rs"

[[bin]]
name = "pd-edge-console"
path = "src/bin/pd-edge-console.rs"

[[bin]]
name = "pd-edge-sample-echo-server"
path = "src/bin/pd-edge-sample-echo-server.rs"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1", "http2"] }
h2 = { version = "0.4", optional = true }
futures-util = "0.3"
pd-edge-host-function = { path = "./pd-edge-host-function" }
linkme = "0.3"
vm = { package = "pd-vm", path = "../pd-vm", default-features = false, features = ["runtime"] }
edge_abi = { package = "pd-edge-abi", path = "../pd-edge-abi", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
owo-colors = "4"
supports-color = "3"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
url = "2"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rcgen = { version = "0.12", optional = true }
webrtc = { version = "0.17", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "1", optional = true }
rustls-pemfile = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console"] }
