[package]
name = "pd-host-function"
version.workspace = true
edition.workspace = true
description = "Proc macro support for RustScript host functions"
license = "MIT"
homepage = "https://rustscript.org/"
repository = "https://github.com/rustscript-lang/rustscript"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
