[package]
name = "pd-vm-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
runtime = ["vm/runtime"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vm = { package = "pd-vm", path = "..", default-features = false }
edge_abi = { package = "pd-edge-abi", path = "../../pd-edge/pd-edge-abi" }
