[package]
name = "pd-vm-wasm"
version.workspace = true
edition.workspace = true
homepage = "https://rustscript.org/"
repository = "https://github.com/rustscript-lang/rustscript"

[lib]
crate-type = ["cdylib"]

[features]
default = []
runtime = ["vm/runtime"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vm = { package = "pd-vm", path = "..", default-features = false }
edge_abi = { package = "pd-edge-abi", version = "0.1.1" }
