[package]
name = "pd-vm"
version.workspace = true
edition.workspace = true

[lib]
name = "vm"

[features]
default = ["runtime", "cli"]
runtime = []
cli = ["dep:rustyline", "runtime"]

[[bin]]
name = "pd-vm-run"
path = "src/bin/pd-vm-run.rs"
required-features = ["cli"]

[dependencies]
rustyline = { version = "14", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
