[package]
name = "pd-vm"
version.workspace = true
edition.workspace = true

[lib]
name = "vm"

[features]
default = ["runtime", "cli"]
runtime = []
cli = ["dep:rustyline", "runtime"]
cranelift-jit = [
    "runtime",
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]

[[bin]]
name = "pd-vm-run"
path = "src/bin/pd-vm-run.rs"
required-features = ["cli"]

[dependencies]
cranelift-codegen = { version = "0.129.1", optional = true }
cranelift-frontend = { version = "0.129.1", optional = true }
cranelift-jit = { version = "0.129.1", optional = true }
cranelift-module = { version = "0.129.1", optional = true }
cranelift-native = { version = "0.129.1", optional = true }
futures-channel = "0.3"
regex = "1"
rustyline = { version = "14", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
