[package]
name = "rustscript"
version.workspace = true
edition.workspace = true
description = "RustScript scripting language — alias for the pd-vm crate"
license = "MIT"
repository = "https://github.com/rustscript-lang/rustscript"
homepage = "https://rustscript.org/"

[lib]
name = "rustscript"

[features]
default = ["runtime", "cli", "cranelift-jit"]
runtime = ["pd_vm_crate/runtime"]
edge-abi = ["pd_vm_crate/edge-abi"]
cli = ["pd_vm_crate/cli"]
cranelift-jit = ["pd_vm_crate/cranelift-jit"]

[dependencies]
pd_vm_crate = { package = "pd-vm", path = "../..", version = ">=0.1.0, <1.0.0" }
